--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.20
         
     - name: Install dependencies
-      run: go get .
+      run: go mod tidy
       
     - name: Build
-      run: go build -o medview main.go
+      run: go build .
