--- a/microservices/analyzer/requirements.txt
+++ b/microservices/analyzer/requirements.txt
@@ -8,3 +8,23 @@ sniffio==1.3.0
 starlette==0.27.0
 typing-extensions==4.6.2
 uvicorn==0.22.0
+anyio==3.6.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+fastapi==0.95.2
+h11==0.14.0
+idna==3.4
+numpy==1.24.3
+pandas==2.0.1
+pydantic==1.10.8
+python-dateutil==2.8.2
+pytz==2023.3
+requests==2.31.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing-extensions==4.6.2
+tzdata==2023.3
+urllib3==2.0.2
+uvicorn==0.22.0
